# minimal-rust-evm

./: Cargo.toml
src/: bytecode.rs  context.rs  evm.rs  execution_error.rs  main.rs  memory.rs  opcodes.rs  stack.rs  vm.rs
tests/: test_script.rs
