[package]
name = "minimal-rust-evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.0"
ethereum-types = "0.9.2"
hex = "0.4"
sha3 = "0.9.0"
ethabi = { git = "https://github.com/rust-ethereum/ethabi"}
ethabi-contract = { git = "https://github.com/rust-ethereum/ethabi"}
ethabi-derive = { git = "https://github.com/rust-ethereum/ethabi"}

[dev-dependencies]
